virtual machines/ubuntu-minikube/Kubernetes/prometheus/prometheus-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-in
  namespace: prometheus
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: nginx-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - 403'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://grafana.aleixohome.lan"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
spec:
  tls:
  - hosts:
    - prometheus.aleixohome.lan
    secretName: aleixohome-ssl
  rules:
  - host: prometheus.aleixohome.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
